Wed Apr 22 16:52:37 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_14.

	* string.c (str_modify): check for embedded pointer reference.

	* gc.c (obj_free): ditto.

	* pack.c (pack_pack): p/P template to embed pointers.

Wed Apr 22 00:07:10 1998  Tadayoshi Funaba  <tadf@kt.rim.or.jp>

	* array.c (ary_rindex): embarrassing typo.

Tue Apr 21 12:31:48 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_13.

	* configure.in (RUBY_LIB): supports --program-{prefix,suffix}.

	* array.c (ary_rindex): new method.

	* io.c (io_binmode): should return self.

Tue Apr 21 08:23:04 1998  Tadayoshi Funaba  <tadf@kt.rim.or.jp>

	* parse.y (here_document): calling parse_string with wrong
	  arguments.

	* struct.c (struct_aset): problem member assignment with name.

Mon Apr 20 14:47:49 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_12.

	* time.c (time_arg): args may be string (support for reduced
	  implicit type conversion).

	* lib/base64.rb: changed to use pack/unpack with `m' template.

Mon Apr 20 06:23:20 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* variable.c (mod_remove_const): new method.

Sat Apr 18 03:53:27 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* hash.c (hash_each_with_index): removed.  use Enumerable's
	  each_with_index instead.

	* class.c (rb_include_module): check for super modules, since
 	  module's included modules may be changed.

Fri Apr 17 21:50:47 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* marshal.c (r_long): r_byte() may return signed byte.

Fri Apr 17 11:58:30 1998  NAGAI Hidetoshi  <nagai@dumbo.ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (lib_mainloop): thread and interrupt check.

Fri Apr 17 11:06:30 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (find_file): try to fopen() to check whether file exists.

	* ruby.c (load_file): ditto.

	* struct.c (struct_aset): struct member can be set by member name.
